tests/paczka1/fuzzy1/60997473.err
Error in line 3: S878 S116 9,5
Error in line 11: st5mT S878 12,5
Error in line 26: 74GGin S116 29,6
Error in line 27: 74GGin S487 12,8
Error in line 28: 74GGin S878 86,1
Error in line 21: BMlI S487 43,1
Error in line 20: Wo5RUFtLq6 S361 401,4
